--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@celo/base": "1.3.3",
     "@ethersproject/abi": "5.4.1",
     "@ethersproject/abstract-provider": "^5.4.0",
+    "bignumber.js": "^9.1.0",
     "cross-fetch": "3.0.4",
     "ethers": "^5.5.2"
   },
@@ -35,7 +36,7 @@
     "eslint": "^8.0.1",
     "jest": "27.3.1",
     "ts-jest": "27.0.7",
-    "typescript": "^4.4.4",
-    "ts-node": "10.4.0"
+    "ts-node": "10.4.0",
+    "typescript": "^4.4.4"
   }
 }
